<resources>
    <string name="app_name">AndroidAssignments</string>
    <string name="hello_message">Hello World!</string>
    <string name="ButtonText">I\'m a Button!</string>
    <string name="login">Login</string>"
    <string name="password">Password</string>
    <string name="RadioButton">Radio Button</string>
    <string name="CheckBox">CheckBox</string>
    <string name="loginName">Login Name</string>
    <string name="Switch">What does this do?</string>
    <string name="dialog">Do you want to finish the activity?</string>
    <string name="dialog_title">Finish The Activity</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="my_information"> My info I want to display</string>
    <string name="startChat"> Start Chat</string>
    <string name="Send">Send</string>
    <string name="title_activity_test_toolbar">TestToolbar</string>
    <string name="startToolbar">Start Toolbar</string>
    <string name="newMessage">New Message</string>
</resources>
