<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:columnCount="2"
    android:rowCount="2"
    android:layout_columnWeight="1"
    android:layout_gravity="fill"
    android:foregroundGravity="fill"
    tools:context=".ListItemsActivity">

    <RadioButton android:text="@string/RadioButton" />

    <CheckBox
        android:id="@+id/checkbox"
        android:text="@string/CheckBox" />

    <Switch
        android:id="@+id/switchButton"
        android:text="@string/Switch" />

    <ImageButton
        android:id="@+id/imageButton"
        android:src="@android:drawable/ic_menu_camera" />
</GridLayout>